2001-09-30  Anders Carlsson  <andersca@gnu.org>

	* libgnomevfs/gnome-vfs-module-callback.c:
	(gnome_vfs_module_callback_free_stack_info): Free the stack info
	structure too.

2001-09-28  Darin Adler  <darin@bentspoon.com>

	* modules/file-method.c: (do_read_directory):
	Add back MIME type code that we accidentally removed when
	we removed directory filtering.

2001-09-26  Maciej Stachowiak  <mjs@noisehavoc.org>

	* configure.in, NEWS: updated for 1.9.1

2001-09-26  Maciej Stachowiak  <mjs@noisehavoc.org>

	* doc/tmpl/gnome-vfs-unused.sgml: Regenerated by gtk-doc

	Merged some changes from the stable branch:

	2001-09-10  Maciej Stachowiak  <mjs@noisehavoc.org>

	* libgnomevfs/gnome-vfs-uri.h, libgnomevfs/gnome-vfs-uri.c
	(gnome_vfs_uri_resolve_relative): Renamed from
	gnome_vfs_uri_relative_new; reversed argument order.

	2001-09-08  Maciej Stachowiak  <mjs@noisehavoc.org>

	Fix make distcheck:

	* libgnomevfs/gnome-vfs-configuration.c: (configuration_load),
	(install_path_list), (gnome_vfs_configuration_init):
	* test/Makefile.am: Set environment variables so that `make check'
	can find the uninstalled modules and configuration.
	
2001-09-25  Darin Adler  <darin@bentspoon.com>

	* modules/cdda-cddb.c: (CDDBProcessLine):
	* modules/http-authn.c: (http_authn_glist_find_header),
	(http_authn_parse_response_header_basic):
	* modules/nfs-method.c: (server_connection_acquire):
	Switched to new ascii version of strcasecmp family.

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* configure.in: Require glib 1.3.9.

	* libgnomevfs/gnome-vfs-mime.c:
	(gnome_vfs_mime_type_from_name_or_default):
	* libgnomevfs/gnome-vfs-uri.c: (split_toplevel_uri),
	(get_method_string):
	Fix for changed signature of g_ascii_strup/strdown.

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* modules/gzip-method.c: (skip):
	* modules/translate-method.c: (my_poptParseArgvString),
	(tr_args_parse):
	Use g_alloca instead of alloca for better portability.
