@@ -5,8 +5,6 @@ AM_INIT_AUTOMAKE(gnome-vfs, 1.9.1)
 
 AM_MAINTAINER_MODE
 
-AM_PROG_XML_I18N_TOOLS
-
 GNOME_COMMON_INIT
 GNOME_PLATFORM_GNOME_2(yes, force)
 
@@ -15,6 +13,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_AWK
 AM_PROG_LIBTOOL
+AC_PROG_INTLTOOL
 
 dnl Versions shared with the .spec file.
 
