@@ -1,3 +1,13 @@
+2001-10-02  Darin Adler  <darin@bentspoon.com>
+
+	* .cvsignore:
+	* Makefile.am:
+	* configure.in:
+	Changed from xml-i18n-tools to intltool.
+
+	* doc/tmpl/gnome-vfs-unused.sgml: Regenerated by gtk-doc.
+	(Do we have a version mismatch?)
+
 2001-09-30  Anders Carlsson  <andersca@gnu.org>
 
 	* libgnomevfs/gnome-vfs-module-callback.c:
